# free-ollama

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs
src/scanner/: mod.rs  simple_scan.rs
src/storage/: models.rs
src/utils/: csv_parser.rs  mod.rs
