[package]
name = "free-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
url = "2.2"
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
indicatif = "0.17"